--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,10 @@
         <div id="top-buttons">
             <button id="invitButton">+ Invite</button>
 
+            <div class="remaining-time">
+                <p id="remaining-time-text">Erase in: <span id="remaining-time-value">00:00</span></p>
+            </div>
+
             <label class="switch">
                 <input type="checkbox" id="dark-mode-toggle" onclick="toggleDarkMode(this)" checked>
                 <span class="slider"></span>
