--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <title>Index</title>
     <link rel="icon" href="<%= launch_folder %>/icon.webp" type="image/x-icon">
     <link rel="stylesheet" href="<%= launch_folder %>/styles.css">
+    <!--<script src="<%= launch_folder %>/scripts/sjcl.js"></script>-->
     <script src="<%= launch_folder %>/scripts/script_1.js"></script>
 </head>
 
